--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -109,25 +109,25 @@ scrolling:
 font:
   normal:
     Default:
-    family: JetBrains Mono
+    family: Fira Code Retina
     style: Regular
   bold:
-    family: JetBrains Mono
+    family: Fira Code Retina
     style: Bold
   italic:
-    family: JetBrains Mono
+    family: Fira Code Retina
     style: Italic
   bold_italic:
-    family: JetBrains Mono
+    family: Fira Code Retina
     style: Bold Italic
   size: 9.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
   # spacing.
-  #offset:
-  #  x: 0
-  #  y: 0
+  offset:
+    x: 0
+    y: 1
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the
@@ -344,16 +344,16 @@ colors:
   # When set to `true`, selected text will be copied to the primary clipboard.
   #save_to_clipboard: false
 
-#cursor:
+cursor:
   # Cursor style
-  #style:
+  style:
     # Cursor shape
     #
     # Values for `shape`:
     #   - ▇ Block
     #   - _ Underline
     #   - | Beam
-    #shape: Block
+    shape: Beam
 
     # Cursor blinking state
     #
@@ -362,7 +362,7 @@ colors:
     #   - Off: Disable blinking by default
     #   - On: Enable blinking by default
     #   - Always: Force the cursor to always blink
-    #blinking: Off
+    blinking: On
 
   # Vi mode cursor style
   #
