--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -148,13 +148,13 @@ blur-strength = 3
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
-blur-background = true
+blur-background = false
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
 #    blur-background
 # Bad in performance, with driver-dependent behavior. The name may change.
-blur-background-frame = true
+blur-background-frame = false
 
 # Use fixed blur strength rather than adjusting according to window opacity.
 blur-background-fixed = true
