--- a/i3blocks/styles/themes/i3blocks-simple.conf
+++ b/i3blocks/styles/themes/i3blocks-simple.conf
@@ -1,6 +1,6 @@
 markup=pango
 separator=true
-separator_block_width=45
+separator_block_width=40
 border_top=1
 border_left=0
 border_right=0
@@ -46,7 +46,8 @@ min_width="------------"
 border=#C7D1E2
 
 [arch-logo]
-full_text="<span font='Inconsolata Nerd Font 15' color='#ffffff'>󰣇 </span>"
 command=/home/mishi/.config/scripts/tools/powermenu.sh
+full_text="<span font='Inconsolata Nerd Font 15' color='#ffffff'>󰣇 </span>"
 interval=none
 min_width="---"
+align=left
