--- a/i3blocks/styles/themes/i3blocks-angles.conf
+++ b/i3blocks/styles/themes/i3blocks-angles.conf
@@ -10,7 +10,7 @@ align=center
 
 # VOLUME
 [left]
-command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+command=echo "<span font='Inconsolata Nerd Font 30' color='#383c45'></span>"
 interval=once
 [volume]
 background=#383c45
@@ -100,4 +100,3 @@ full_text="<span font='Inconsolata Nerd Font 15' color='#ffffff'>󰣇 </span>"
 command=/home/mishi/.config/scripts/tools/powermenu.sh
 interval=none
 min_width="---"
-
