--- a/i3blocks/styles/themes/i3blocks-rounded.conf
+++ b/i3blocks/styles/themes/i3blocks-rounded.conf
@@ -102,9 +102,11 @@ interval=once
 align=right
 [arch-logo]
 background=#383c45
-full_text="<span font='Inconsolata Nerd Font 15' color='#ffffff'>󰣇 </span>"
+full_text="<span font='Font Awesome 6 Free Regular 10' color='#ffffff'></span>"
 command=/home/mishi/.config/scripts/tools/powermenu.sh
 interval=none
+min_width="---"
+align=center
 [right]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
