--- a/i3blocks/styles/themes/i3blocks-solid.conf
+++ b/i3blocks/styles/themes/i3blocks-solid.conf
@@ -1,53 +1,75 @@
 markup=pango
-separator=true
-separator_block_width=40
-border_top=1
+separator=false
+separator_block_width=0
+border_top=0
 border_left=0
 border_right=0
 border_bottom=0
-align=right
+align=center
 
+
+# VOLUME
+[left]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
 [volume]
+background=#383c45
 command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 100 --critical 120
 interval=once
-min_width="--------"
+min_width="------------"
 signal=1
-border=#D0C3FF
 
+
+
+# WIFI
 [wifi]
+background=#383c45
 command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 40 --critical 20
 interval=10
-min_width="--------"
+min_width="------------"
 signal=3
-border=#A7D3FF
 
+
+# MEMORY
 [memory]
+background=#383c45
 command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 70 --critical 90
 interval=30
-min_width="-------"
-border=#D0FFFA
+min_width="------------"
 
+
+# LOAD
 [load]
+background=#383c45
 command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 0.7 --critical 1.0
 interval=30
-min_width="-------"
-border=#FFD4B9
+min_width="------------"
 
+
+# GPU
 [gpu]
+background=#383c45
 command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 70 --critical 80
 interval=30
-min_width="---------"
-border=#B8F7D9
+min_width="------------"
 
+
+# TIME
 [time]
+background=#383c45
 command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME
 interval=10
-min_width="------------"
-border=#C7D1E2
+min_width="----------------"
 
+
+# POWERMENU
 [arch-logo]
-command=/home/mishi/.config/scripts/tools/powermenu.sh
+background=#383c45
 full_text="<span font='Font Awesome 6 Free Regular 10' color='#ffffff'></span>"
+command=/home/mishi/.config/scripts/tools/powermenu.sh
 interval=none
 min_width="---"
+[right]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
 align=left
