--- a/i3blocks/styles/themes/i3blocks-solid.conf
+++ b/i3blocks/styles/themes/i3blocks-solid.conf
@@ -14,7 +14,7 @@ command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 [volume]
 background=#383c45
-command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 100 --critical 120
+command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 100 --critical 120
 interval=once
 min_width="------------"
 signal=1
@@ -24,7 +24,7 @@ signal=1
 # WIFI
 [wifi]
 background=#383c45
-command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 40 --critical 20
+command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 40 --critical 20
 interval=10
 min_width="------------"
 signal=3
@@ -33,7 +33,7 @@ signal=3
 # MEMORY
 [memory]
 background=#383c45
-command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 70 --critical 90
+command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 70 --critical 90
 interval=30
 min_width="------------"
 
@@ -41,7 +41,7 @@ min_width="------------"
 # LOAD
 [load]
 background=#383c45
-command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 0.7 --critical 1.0
+command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 0.7 --critical 1.0
 interval=30
 min_width="------------"
 
@@ -49,7 +49,7 @@ min_width="------------"
 # GPU
 [gpu]
 background=#383c45
-command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 70 --critical 80
+command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 70 --critical 80
 interval=30
 min_width="------------"
 
@@ -57,7 +57,7 @@ min_width="------------"
 # TIME
 [time]
 background=#383c45
-command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME
+command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME
 interval=10
 min_width="----------------"
 
