--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -5,16 +5,16 @@
     "editor.cursorBlinking": "smooth",
     "editor.cursorSmoothCaretAnimation": "on",
     "editor.detectIndentation": false,
-    "editor.fontFamily": "'Monaco', monospace, 'Inconsolata Nerd Font', 'Font Awesome 6 Brands', 'Font Awesome 6 Free Solid'",
-    "editor.fontSize": 12,
+    "editor.fontFamily": "'Fira Code Retina', monospace, 'Inconsolata Nerd Font', 'Font Awesome 6 Brands', 'Font Awesome 6 Free Solid'",
+    "editor.fontSize": 14,
     "editor.fontWeight": "normal",
     "editor.fontLigatures": true,
     "editor.formatOnType": true,
     "editor.formatOnSave": false,
     "editor.insertSpaces": true,
     "editor.indentSize": 4,
-    "editor.letterSpacing": 0.4,
-    "editor.lineHeight": 1.5,
+    "editor.letterSpacing": 0,
+    "editor.lineHeight": 1.4,
     "editor.minimap.enabled": false,
     "editor.quickSuggestions": {
         "other": false,
