--- a/i3blocks/styles/themes/i3blocks-angles.conf
+++ b/i3blocks/styles/themes/i3blocks-angles.conf
@@ -14,7 +14,7 @@ command=echo "<span font='Inconsolata Nerd Font 30' color='#383c45'></span>"
 interval=once
 [volume]
 background=#383c45
-command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 100 --critical 120
+command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 100 --critical 120
 interval=once
 min_width="----------"
 signal=1
@@ -29,7 +29,7 @@ command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 [wifi]
 background=#383c45
-command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 40 --critical 20
+command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 40 --critical 20
 interval=10
 min_width="----------"
 signal=3
@@ -44,7 +44,7 @@ command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 [memory]
 background=#383c45
-command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 70 --critical 90
+command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 70 --critical 90
 interval=30
 min_width="---------"
 [right]
@@ -58,7 +58,7 @@ command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 [load]
 background=#383c45
-command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 0.7 --critical 1.0
+command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 0.7 --critical 1.0
 interval=30
 min_width="---------"
 [right]
@@ -72,7 +72,7 @@ command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 [gpu]
 background=#383c45
-command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME --warning 70 --critical 80
+command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 70 --critical 80
 interval=30
 min_width="----------"
 [right]
@@ -86,7 +86,7 @@ command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 [time]
 background=#383c45
-command=~/.config/i3blocks/i3blocks --check $BLOCK_NAME
+command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME
 interval=10
 min_width="-------------"
 [right]
