--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -85,7 +85,7 @@ fade-out-step = 0.03
 #################################
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 0.99
+inactive-opacity = 0.97
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 frame-opacity = 0.1
@@ -95,7 +95,7 @@ frame-opacity = 0.1
 inactive-opacity-override = true
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.98
+active-opacity = 0.95
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 inactive-dim = 0.1
@@ -117,7 +117,6 @@ inactive-dim = 0.1
 
 opacity-rule = [ "100:class_g = 'Brave-browser'" ];
 opacity-rule = [ "50:class_g = 'notif-overlay'" ];
-#opacity-rule = [ "50:class_g = 'Alacritty'" ];
 
 #################################
 #           Corners             #
@@ -169,6 +168,7 @@ blur-kern = "3x3box";
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
+blur-background-exclude = ["class_g = 'i3bar'"]
 
 #################################
 #       General Settings        #
