--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -16,7 +16,7 @@ interval=once
 background=#383c45
 command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 100 --critical 120
 interval=once
-min_width="----------"
+min_width=60
 signal=1
 [right]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
@@ -31,7 +31,7 @@ interval=once
 background=#383c45
 command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 40 --critical 20
 interval=30
-min_width="----------"
+min_width=60
 signal=3
 [right]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
@@ -46,7 +46,7 @@ interval=once
 background=#383c45
 command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 70 --critical 90
 interval=30
-min_width="---------"
+min_width=60
 [right]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
@@ -60,7 +60,7 @@ interval=once
 background=#383c45
 command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 0.7 --critical 1.0
 interval=30
-min_width="---------"
+min_width=60
 [right]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
@@ -74,7 +74,7 @@ interval=once
 background=#383c45
 command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME --warning 70 --critical 80
 interval=30
-min_width="----------"
+min_width=60
 [right]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
@@ -88,7 +88,7 @@ interval=once
 background=#383c45
 command=python ~/.config/i3blocks/i3blocks.py --check $BLOCK_NAME
 interval=10
-min_width="-------------"
+min_width=100
 [right]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
@@ -99,4 +99,4 @@ interval=once
 full_text="<span font='Inconsolata Nerd Font 14' color='#ffffff'>󰣇 </span>"
 command=/home/mishi/.config/scripts/tools/powermenu.sh
 interval=none
-min_width="---"
+min_width=20
