--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -323,7 +323,7 @@ max-brightness = 1.0
 # Make transparent windows clip other windows like non-transparent windows do,
 # instead of blending on top of them.
 #
-# transparent-clipping = false
+transparent-clipping = false
 
 # Specify a list of conditions of windows that should never have transparent
 # clipping applied. Useful for screenshot tools, where you need to be able to
